# rust-hello

./: .gitignore  Cargo.toml  README.md
example/test_hello/: Cargo.toml
example/test_hello/src/: main.rs
src/: hello_rust.rs  lib.rs  main.rs
