[package]
name = "rust_hello_test"
version = "0.2.1"
edition = "2018"
description = "テストクレートです"
license = "MIT"
documentation = "https://docs.rs/rust_hello_test/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "seeder"
path = "src/bin/seeder.rs"

[dependencies]
